improve code quality. At list we should add other business logic from emails.

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
@@ -6,6 +6,10 @@
 	<p><font color="#ff0000">{FORM_ERROR.Message}</font></p>
 <!-- END FORM_ERROR -->
 
+<!-- BEGIN UNIQUE_ERROR -->
+	<p><font color="#ff0000">{UNIQUE_ERROR.Message}</font></p>
+<!-- END UNIQUE_ERROR -->
+
 <!-- BEGIN FORM -->
 <script>
 function ChangeDonate(chk)
