fix problem with invalid characters

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
@@ -36,6 +36,12 @@ function ChangeDonate(chk)
 		<td class="required">{FORM.name_ErrReq.Message}</td>
 	</tr>
 	<!-- END name_ErrReq -->
+	<!-- BEGIN name_ErrRule -->
+	<tr>
+		<td>&nbsp;</td>
+		<td class="required">{FORM.name_ErrRule.Message}</td>
+	</tr>
+	<!-- END name_ErrRule -->
 	
 	<tr>
 		<td>{FORM.LastName}<font color="red">*</font></td>
@@ -47,7 +53,13 @@ function ChangeDonate(chk)
 		<td class="required">{FORM.surname_ErrReq.Message}</td>
 	</tr>
 	<!-- END surname_ErrReq -->
-
+	<!-- BEGIN surname_ErrRule -->
+	<tr>
+		<td>&nbsp;</td>
+		<td class="required">{FORM.name_ErrRule.Message}</td>
+	</tr>
+	<!-- END surname_ErrRule -->
+	
 	<tr>
 		<td>{FORM.ProfessionalProfile}<font color="red">*</font></td>
 		<td>
