--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-admin.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-admin.html
@@ -1,25 +1,23 @@
-A new application for membership has been received by Milan IN Web Site on $date
+A new application for membership has been received by Milan IN Web Site on {CURRENT_DATE}
 User Data follows:
 ---- First Name ----
-$p_name
-----
+{name}
+
 ---- Last Name ----
-$p_surname
-----
+{surname}
+
 ---- Phone ----
-$p_phone
-----
+{phone}
+
 ---- e-mail ----
-$p_email
+{email}
+
 ---- URL to LinkedIn ----
-$p_url
----- Comment ----
-$p_msg----
----- How did ----
-$p_how_did_u
-----
----- Proffessional Profile ----
-$p_prof_profile
+https://www.linkedin.com/profile?viewProfile=&amp;key={linkedin}
+
+---- Reason ----
+{requestReason}
+
 ----
 Follow this link to view and edit the new user account: 
-$link
+https://www.milanin.com/members/{account_lid}/
