--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-user.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-user.html
@@ -1,8 +1,22 @@
-Gentile Collega,
-abbiamo ricevuto la tua richiesta di iscrizione al Business Club Milan IN.
-Nel giro di qualche giorno riceverai da Pier Carlo Pozzati (presidente del Club) la richiesta di collegamento LinkedIn: 
-ti preghiamo di accettarla, dal momento che questa una condizione essenziale per completare la tua iscrizione.
-Una volta accettata questa richiesta ti verr inviata una welcome letter contenete le istruzioni per il sito, username e password per accedere.
-Nel caso invece questa richiesta fosse stata inviata per errore ti preghiamo di segnalarlo a silvia.lenich@milanin.com.
-Grazie per il tuo interesse per il nostro Club e a presto!
-Silvia Lenich\nSegreteria Business Club Milan IN
+Dear {name} {surname},
+We confirm we have received your request to join Milan-In Business Club.
+Within  few days you'll receive a LinkedIn connection request from our president Pier Carlo Pozzati. We kindly ask you to accept thins invitation, as a condition to complete your Milan-In registration procedure.
+ 
+After this step you'll receive a welcome letter with username and password for your web site account, along with some instruction for to do this.
+ 
+Thank you for the interest in our Club, hope to see you in person soon!
+ 
+Silvia Lenich
+Secretary/ Treasurer,  Business Club Milan IN
+
+
+Gentile  {name} {surname}.
+Ti confermiamo di aver ricevuto la tua richiesta di iscrizione al  Business Club Milan-In.
+Entro alcuni giorni riceverai la richiesta di connessione a LinkedIn da parte del nostro Presidente Pier Carlo Pozzati. 
+Ti chiediamo gentilmente di accettare l’invito per completare poi la procedura di registrazione.
+Solo in seguito, riceverai una lettera di benvenuto con la username e la password per entrare nel sito, insieme alle istruzioni necessarie.
+Grazie per l’interesse dimostrato verso il nostro Club, speriamo di conoscerti presto di persona.
+ 
+A presto
+Silvia Lenich
+Segretaria/Tesoriere, Business Club Milan IN 
