--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-user.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-user.html
@@ -1,3 +1,19 @@
+ITALIAN TEXT
+
+Gentile  {name} {surname}.
+Ti confermiamo di aver ricevuto la tua richiesta di iscrizione al Business Club Milan-In.
+Entro alcuni giorni riceverai la richiesta di connessione a LinkedIn da parte del nostro Presidente Pier Carlo Pozzati. 
+Ti chiediamo gentilmente di accettare l段nvito per completare poi la procedura di registrazione.
+Solo in seguito, riceverai una lettera di benvenuto con la username e la password per entrare nel sito, insieme alle istruzioni necessarie.
+Grazie per l段nteresse dimostrato verso il nostro Club, speriamo di conoscerti presto di persona.
+
+A presto
+Silvia Lenich
+Segretaria/Tesoriere, Business Club Milan IN 
+
+
+ENGLISH TEXT
+
 Dear {name} {surname},
 We confirm we have received your request to join Milan-In Business Club.
 Within few days you'll receive a LinkedIn connection request from our president Pier Carlo Pozzati. We kindly ask you to accept thins invitation, as a condition to complete your Milan-In registration procedure.
@@ -10,13 +26,3 @@ Silvia Lenich
 Secretary/ Treasurer, Business Club Milan IN
 
 
-Gentile  {name} {surname}.
-Ti confermiamo di aver ricevuto la tua richiesta di iscrizione al Business Club Milan-In.
-Entro alcuni giorni riceverai la richiesta di connessione a LinkedIn da parte del nostro Presidente Pier Carlo Pozzati. 
-Ti chiediamo gentilmente di accettare l段nvito per completare poi la procedura di registrazione.
-Solo in seguito, riceverai una lettera di benvenuto con la username e la password per entrare nel sito, insieme alle istruzioni necessarie.
-Grazie per l段nteresse dimostrato verso il nostro Club, speriamo di conoscerti presto di persona.
-
-A presto
-Silvia Lenich
-Segretaria/Tesoriere, Business Club Milan IN 
