--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-admin.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-admin.html
@@ -1,10 +1,20 @@
 A new application for membership has been received by Milan IN Web Site on {CURRENT_DATE}
 User Data follows:
+
+---- UID ----
+{account_lid}
+
 ---- First Name ----
 {name}
 
 ---- Last Name ----
 {surname}
+
+---- Which professional profile better describes you? ----
+{prof_profile_text}
+
+---- URL to LinkedIn ----
+https://www.linkedin.com/profile?viewProfile=&amp;key={linkedin}
 
 ---- Phone ----
 {phone}
@@ -12,11 +22,26 @@ User Data follows:
 ---- e-mail ----
 {email}
 
----- URL to LinkedIn ----
-https://www.linkedin.com/profile?viewProfile=&amp;key={linkedin}
-
 ---- Reason ----
 {requestReason}
+
+---- How did you know about this club? ----
+{how_did_u_text}
+
+---- Country of residence ----
+{residence_country}
+
+---- City of residence ----
+{residence_city}
+
+---- Industry ----
+{industries_text}
+
+---- Occupation area ----
+{occ_areas_text}
+
+---- Generated password ----
+{pwd}
 
 ----
 Follow this link to view and edit the new user account: 
