--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-admin.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/email-to-admin.html
@@ -20,7 +20,7 @@ https://www.linkedin.com/profile?viewProfile=&amp;key={linkedin}
 {phone}
 
 ---- e-mail ----
-{email}
+{emailaddress}
 
 ---- Reason ----
 {requestReason}
