--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
@@ -368,24 +368,24 @@ td.required
 	</tr>
 	<!-- END favorite_sport_ErrReq -->
 	
-	<!-- 
+	 
 	<tr>
 		<th colspan="2">Donate to Milan-IN</th>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-		<input type="radio" name="isdonate" value="0" {FORM.nodonate_CHECKED} onclick="ChangeDonate(this)" /> {FORM.I_not_donate} <br />
-		<input type="radio" name="isdonate" value="1" {FORM.yesdonate_CHECKED} onclick="ChangeDonate(this)" /> {FORM.I_donate} <br />
-		<div style="display:none;padding-left:20px;" id="donateBlock">
-			<input type="radio" name="moneydonate" value="10" /> 10 EUR <br />
-			<input type="radio" name="moneydonate" value="20" /> 20 EUR <br />
-			<input type="radio" name="moneydonate" value="30" /> 30 EUR <br />
-			<input type="radio" name="moneydonate" value="50" /> 50 EUR <br />
+		<!-- BEGIN isdonate -->
+			<input type="radio" name="isdonate" value="{FORM.isdonate.VALUE}" {FORM.isdonate.CHECKED} onclick="ChangeDonate(this)" /> {FORM.isdonate.TEXT} <br />
+		<!-- END isdonate -->
+		<div style="display:{FORM.moneydonateDisplay};padding-left:20px;" id="donateBlock">
+			<!-- BEGIN moneydonate -->
+				<input type="radio" name="moneydonate" value="{FORM.moneydonate.VALUE}" {FORM.moneydonate.CHECKED} /> {FORM.moneydonate.TEXT} EUR <br />
+			<!-- END moneydonate -->
 		</div>
 		</td>
 	</tr>
-	-->
+	
 	<tr>
 		<td colspan="2" class="checkBoxSplitter">&nbsp;</td>
 	</tr>
@@ -421,3 +421,28 @@ td.required
 </table>
 </form>
 <!-- END FORM -->
+
+<!-- BEGIN DONATE -->
+<center>
+<font color="red">{DONATE.TitleText}</font>
+<form name="_xclick" action="https://www.paypal.com/us/cgi-bin/webscr" method="post">
+<input type="hidden" name="cmd" value="_xclick">
+<input type="hidden" name="business" value="tesoreria@milanin.com">
+<input type="hidden" name="item_name" value="Donate to Milan IN B.C.">
+<input type="hidden" name="no_note" value="1"/>
+<input type="hidden" name="tax" value="0"/>
+<input type="hidden" name="lc" value="{DONATE.FLANG}"/>
+<input type="hidden" name="bn" value="PP-DonationsBF"/>
+<input type="hidden" name="currency_code" value="EUR">
+<input type="hidden" name="amount" value="{DONATE.amount}">
+<!-- BEGIN EN -->
+<input type="image" src="http://www.paypalobjects.com/en_US/i/logo/logo-xclick2.gif" name="submit"/>
+<img alt="" border="0" src="http://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1"/>
+<!-- END EN -->
+<!-- BEGIN IT -->
+<input type="image" src="http://www.paypalobjects.com/it_IT/i/logo/logo-xclick2.gif" name="submit"/>
+<img alt="" border="0" src="http://www.paypal.com/it_IT/i/scr/pixel.gif" width="1" height="1"/>
+<!-- END IT -->
+</form>
+</center>
+<!-- END DONATE -->
