fixed issue with interest field.

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/templates/joinus/form.html
@@ -336,19 +336,19 @@ td.required
 	</tr>
 	
 	<tr>
-		<td>{FORM.interests}</td>
+		<td>{FORM.interestsBase}</td>
 		<td>
-			<!-- BEGIN interests -->
-			{FORM.interests.Before}<input type="Checkbox" name="interests[]" value="{FORM.interests.VALUE}" {FORM.interests.CHECKED}> {FORM.interests.TEXT}{FORM.interests.After}
-			<!-- END interests -->
+			<!-- BEGIN interestsBase -->
+			{FORM.interestsBase.Before}<input type="Checkbox" name="interestsBase[]" value="{FORM.interestsBase.VALUE}" {FORM.interestsBase.CHECKED}> {FORM.interestsBase.TEXT}{FORM.interestsBase.After}
+			<!-- END interestsBase -->
 		</td>
 	</tr>
-	<!-- BEGIN interests_ErrReq -->
+	<!-- BEGIN interestsBase_ErrReq -->
 	<tr>
 		<td>&nbsp;</td>
-		<td class="required">{FORM.interests_ErrReq.Message}</td>
+		<td class="required">{FORM.interestsBase_ErrReq.Message}</td>
 	</tr>
-	<!-- END interests_ErrReq -->
+	<!-- END interestsBase_ErrReq -->
 	<tr>
 		<td colspan="2" class="checkBoxSplitter">&nbsp;</td>
 	</tr>
@@ -368,7 +368,7 @@ td.required
 	</tr>
 	<!-- END favorite_sport_ErrReq -->
 	
-	 
+	<!--
 	<tr>
 		<th colspan="2">Donate to Milan-IN</th>
 	</tr>
@@ -385,7 +385,7 @@ td.required
 		</div>
 		</td>
 	</tr>
-	
+	-->
 	<tr>
 		<td colspan="2" class="checkBoxSplitter">&nbsp;</td>
 	</tr>
